Load VLC Video from Glade file
Also separate in functions that perform the work and functions thaht
enqueue work in GLib's main thread

--- a/pympress/share/css/default.css
+++ b/pympress/share/css/default.css
@@ -19,6 +19,10 @@
     font-size: 16pt;
 }
 
+.toolbar {
+  background: @theme_base_color
+}
+
 #scribble_overlay {
   background: @theme_bg_color
 }
