--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -18,7 +18,8 @@
     <property name="name">p_win</property>
     <property name="can_focus">False</property>
     <property name="events">GDK_POINTER_MOTION_MASK | GDK_KEY_PRESS_MASK | GDK_STRUCTURE_MASK | GDK_SCROLL_MASK</property>
-    <property name="title" translatable="yes">pympress presenter</property>
+    <property name="title" translatable="yes">Pympress Presenter</property>
+    <property name="role">presenter</property>
     <property name="window_position">center</property>
     <signal name="configure-event" handler="on_configure_win" swapped="no"/>
     <signal name="delete-event" handler="save_and_quit" swapped="no"/>
