--- a/pympress/share/css/default.css
+++ b/pympress/share/css/default.css
@@ -19,6 +19,10 @@
     font-size: 16pt;
 }
 
+#label_time, #label_ett, #frame_clock {
+  font-family: "monospace";
+}
+
 .toolbar {
   background: @theme_base_color
 }
