--- a/pympress/share/xml/highlight.glade
+++ b/pympress/share/xml/highlight.glade
@@ -21,15 +21,15 @@
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
-                <signal name="button-press-event" handler="toggle_scribble" swapped="no"/>
-                <signal name="button-release-event" handler="toggle_scribble" swapped="no"/>
-                <signal name="motion-notify-event" handler="track_scribble" swapped="no"/>
+                <signal name="button-press-event" handler="track_clicks" swapped="no"/>
+                <signal name="button-release-event" handler="track_clicks" swapped="no"/>
+                <signal name="motion-notify-event" handler="track_motions" swapped="no"/>
                 <child>
                   <object class="GtkDrawingArea" id="scribble_p_da">
                     <property name="name">scribble_p_da</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <signal name="draw" handler="draw_scribble_da" swapped="no"/>
+                    <signal name="draw" handler="on_draw" swapped="no"/>
                     <signal name="configure-event" handler="on_configure_da" swapped="no"/>
                   </object>
                 </child>
