--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -517,7 +517,7 @@
                         <property name="orientation">vertical</property>
                         <child>
                           <object class="GtkAspectFrame" id="p_frame_cur">
-                            <property name="name">p_frame_current</property>
+                            <property name="name">p_frame_cur</property>
                             <property name="height_request">200</property>
                             <property name="can_focus">False</property>
                             <property name="label_xalign">0</property>
@@ -616,7 +616,7 @@
                     </child>
                     <child>
                       <object class="GtkFrame" id="p_frame_annot">
-                        <property name="name">p_frame_annotations</property>
+                        <property name="name">p_frame_annot</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="label_xalign">0</property>
