Revert _do_page_change call from Doc.goto, fixes #88
Instead modify EditableLabel to validate better, and use a separator
label instead of reusing label_cur. Also make label format consistent
at a full document scale, do not compare page number and label anymore.

--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -788,7 +788,7 @@
                       <object class="GtkBox" id="hb_cur">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="homogeneous">False</property>
+                        <property name="homogeneous">True</property>
                         <child>
                           <object class="GtkEntry" id="edit_label">
                             <property name="visible">True</property>
@@ -803,6 +803,25 @@
                             <property name="expand">True</property>
                             <property name="fill">True</property>
                             <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="label_sep">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="halign">end</property>
+                            <property name="label">0</property>
+                            <property name="justify">right</property>
+                            <property name="single_line_mode">True</property>
+                            <property name="track_visited_links">False</property>
+                            <style>
+                              <class name="big-info-label"/>
+                            </style>
+                          </object>
+                          <packing>
+                            <property name="expand">True</property>
+                            <property name="fill">True</property>
+                            <property name="position">1</property>
                           </packing>
                         </child>
                         <child>
