Adjust shortcuts: do not change from previous release
To go to next "overlay", aka next page with a different slide label, in
case several contiguous slides have different labels (as is typical with
beamer), use the same as next slide but with a shift or ctrl modifier.

Using page up / page down was a bad idea as some remotes use these key
strokes by default for previous / next page.

Use backspace to go back in history, shift or ctrl backspace to go
forward in history.

--- a/pympress/share/xml/shortcuts.glade
+++ b/pympress/share/xml/shortcuts.glade
@@ -19,7 +19,7 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="visible">1</property>
-                <property name="accelerator">Right Down space</property>
+                <property name="accelerator">Right Down Page_Down space</property>
                 <property name="title" translatable="yes" context="shortcut window">Next slide</property>
               </object>
             </child>
@@ -27,7 +27,7 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="visible">1</property>
-                <property name="accelerator">Left Up BackSpace</property>
+                <property name="accelerator">Left Up Page_Up</property>
                 <property name="title" translatable="yes" context="shortcut window">Previous slide</property>
               </object>
             </child>
@@ -35,7 +35,7 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="visible">1</property>
-                <property name="accelerator">Page_Down</property>
+                <property name="accelerator">&lt;shift&gt;Right &lt;shift&gt;Down &lt;shift&gt;Page_Up</property>
                 <property name="title" translatable="yes" context="shortcut window">Next slide with different label</property>
               </object>
             </child>
@@ -43,7 +43,7 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="visible">1</property>
-                <property name="accelerator">Page_Up</property>
+                <property name="accelerator">&lt;shift&gt;Left &lt;shift&gt;Up &lt;shift&gt;Page_Up</property>
                 <property name="title" translatable="yes" context="shortcut window">Previous slide with different label</property>
               </object>
             </child>
@@ -61,6 +61,22 @@
                 <property name="visible">1</property>
                 <property name="accelerator">End</property>
                 <property name="title" translatable="yes" context="shortcut window">Last slide</property>
+              </object>
+            </child>
+
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="visible">1</property>
+                <property name="accelerator">BackSpace</property>
+                <property name="title" translatable="yes" context="shortcut window">Go back in slide history</property>
+              </object>
+            </child>
+
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="visible">1</property>
+                <property name="accelerator">&lt;shift&gt;BackSpace</property>
+                <property name="title" translatable="yes" context="shortcut window">Go forward in slide history</property>
               </object>
             </child>
 
